# countryguess

./: README.md  countryguess.py  pyproject.toml  requirements.txt  screenshots.md
